syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;

message ProtoJuridicalPersonId {
  int32 identification_type = 1;

  string identifier = 2;

  string issuing_country = 3;

  string nonstate_issuer = 4;
}
