syntax = "proto3";

option csharp_namespace = "OpenVASP.ProtocolMessages.Messages";

package protobuf_openvasp;

message ProtoPostalAddress {
  string street_name = 1;

  int32 building_number = 2;

  string address_line = 3;

  string post_code = 4;

  string town_name = 5;

  string country = 6;
}